# backblaze-drive-stats-analysis

./: .gitignore  README.md  afr_parquet_to_csv.py  afr_parquet_to_human_readable_csv.py  afr_parquet_to_quarterly_csv.py  afr_viz_csv.py  afr_viz_csv_from_iceberg.py  backblaze.sql  backblaze_drive_stats_data.py  compute_afr.py  convert_afr_csv_to_excel_csv.py  create_pgsql_db_from_iceberg.py  create_xlsx_with_new_data.sh  date_range_per_drive_model.py  drive_distribution_by_mfr.py  drive_model_family_regexes.json  drive_model_to_mfr.json  drive_models_per_mfr.py  drives_of_interest_regexes.json  etl_pipeline.py  generate_drive_distribution_csv.py  generate_human_readable_afr_data.py  iceberg_csv_to_avro.py  iceberg_metadata_by_quarter.py  iceberg_table.py  install-latest-python-env.sh  install-latest-uv-python-env.sh  parquet_to_pandas.py  pyproject.toml  quarterly_afr_xlsx_from_iceberg.py  quarterly_drive_model_deployments.py  quarterly_drive_model_distributions.py  quarterly_drive_model_distrubution.py  quarterly_raw_storage_capacity.py  quarterly_raw_storage_capacity_by_datacenter.py  quarterly_raw_storage_capacity_by_mfr.py  requirements.txt  retrieve_backblaze_drive_data.sh  retrieve_backblaze_drive_data_drive_distribution_over_time.sh  sync_s3_bucket_to_directory.sh  (+1 more)
