[project]
name = "backblaze-drive-stats-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.29",
    "boto3-stubs>=1.43.29",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "pyiceberg>=0.11.1",
    "s3fs>=0.4.2",
    "xlsxwriter>=3.2.9",
]
